--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ListPreference
+        android:dialogTitle="@string/start_destiny_dialog_title"
+        android:entries="@array/destinyArrayEntries"
+        android:entryValues="@array/destinyArrayValues"
+        android:icon="@drawable/ic_flag_black_24dp"
+        android:key="@string/start_destiny_key"
+        android:title="@string/start_destiny_dialog_title"
+        app:useSimpleSummaryProvider="true" />
 
 </PreferenceScreen>
