--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?><!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:id="@+id/drawerLayout"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:fitsSystemWindows="true"--><!--tools:openDrawer="start">-->
-
-<!--&lt;!&ndash; Contenido Principal &ndash;&gt;-->
-
-
-<!--&lt;!&ndash;<androidx.appcompat.widget.Toolbar&ndash;&gt;--><!--&lt;!&ndash;android:id="@+id/toolbar"&ndash;&gt;--><!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;--><!--&lt;!&ndash;android:layout_height="?attr/actionBarSize"&ndash;&gt;--><!--&lt;!&ndash;android:background="?attr/colorPrimary"&ndash;&gt;--><!--&lt;!&ndash;android:minHeight="?attr/actionBarSize"&ndash;&gt;--><!--&lt;!&ndash;android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />&ndash;&gt;-->
-
-<!--<fragment--><!--android:id="@+id/navHostFragment"--><!--android:name="androidx.navigation.fragment.NavHostFragment"--><!--android:layout_width="0dp"--><!--android:layout_height="0dp"--><!--app:defaultNavHost="true"--><!--app:layout_constraintBottom_toBottomOf="parent"--><!--app:layout_constraintLeft_toLeftOf="parent"--><!--app:layout_constraintRight_toRightOf="parent"--><!--app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--&lt;!&ndash; Contenido del panel &ndash;&gt;--><!--&lt;!&ndash;<com.google.android.material.navigation.NavigationView&ndash;&gt;--><!--&lt;!&ndash;android:id="@+id/navigationView"&ndash;&gt;--><!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;--><!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;--><!--&lt;!&ndash;android:layout_gravity="start"&ndash;&gt;--><!--&lt;!&ndash;android:fitsSystemWindows="false"&ndash;&gt;--><!--&lt;!&ndash;app:headerLayout="@layout/activity_main_navheader"&ndash;&gt;--><!--&lt;!&ndash;app:menu="@menu/activity_main_drawer" />&ndash;&gt;-->
-
-<!--</androidx.drawerlayout.widget.DrawerLayout>-->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
     <fragment
         android:id="@+id/navHostFragment"
@@ -26,4 +18,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--TODO MAIN_NAV_HEADER -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="false"
+        app:menu="@menu/activity_main_drawer" />
+    <!--app:headerLayout="@layout/activity_main_nav_header"-->
+
+</androidx.drawerlayout.widget.DrawerLayout>
