--- a/app/src/main/res/values/preference_startdestiny.xml
+++ b/app/src/main/res/values/preference_startdestiny.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="pref_visit">Visits</string>
+    <string name="pref_student">Students</string>
+    <string name="pref_business">Business</string>
+    <string name="pref_meeting">Meetings</string>
+
     <string-array name="destinyArrayEntries">
-        <item>Visits</item>
-        <item>Students</item>
-        <item>Business</item>
-        <item>Meetings</item>
+        <item>@string/pref_visit</item>
+        <item>@string/pref_student</item>
+        <item>@string/pref_business</item>
+        <item>@string/pref_meeting</item>
     </string-array>
 
     <string-array name="destinyArrayValues">
-        <item>@id/visitsExpositorFragment</item>
-        <item>@id/studentExpositorFragment</item>
-        <item>@id/businessExpositorFragment</item>
-        <item>@id/meetingsExpositorFragment</item>
-        <!--<item>1</item>-->
-        <!--<item>1</item>-->
-        <!--<item>1</item>-->
-        <!--<item>1</item>-->
+        <item>@string/pref_visit</item>
+        <item>@string/pref_student</item>
+        <item>@string/pref_business</item>
+        <item>@string/pref_meeting</item>
     </string-array>
 
     <string name="start_destiny_key">startDestinyKey</string>
     <string name="start_destiny_dialog_title">Start page</string>
-    <!--<id name="start_destiny_defaultValue">@+id/visitsExpositorFragment</id>-->
+    <string name="start_destiny_defaultValue">@string/pref_visit</string>
 </resources>
