--- a/app/src/main/res/values/preference_visit_time.xml
+++ b/app/src/main/res/values/preference_visit_time.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="visit_time_key">visitTimeKey</string>
+    <string name="visit_time_default">15</string>
 </resources>
