--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -11,12 +11,14 @@
         android:key="@string/start_destiny_key"
         android:title="@string/start_destiny_dialog_title" />
 
-    <EditTextPreference
+    <ListPreference
         android:defaultValue="@string/visit_time_default"
         android:dialogTitle="Next visit time"
-        android:inputType="number"
+        android:entries="@array/timeEntries"
+        android:entryValues="@array/timeValues"
+        android:icon="@drawable/ic_access_time_black_24dp"
+        android:inputType="phone"
         android:key="@string/visit_time_key"
-        android:title="Next visit time"
-        android:icon="@drawable/ic_access_time_black_24dp"/>
+        android:title="Next visit time" />
 
 </PreferenceScreen>
