--- a/app/src/main/res/layout/fragment_expoempresas.xml
+++ b/app/src/main/res/layout/fragment_expoempresas.xml
@@ -31,6 +31,7 @@
             android:text="@string/no_business_yet"
             android:textColor="#000000"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
