--- a/app/src/main/res/layout/fragment_expoalumnos.xml
+++ b/app/src/main/res/layout/fragment_expoalumnos.xml
@@ -26,6 +26,7 @@
         <TextView
             android:id="@+id/lblEmptyView"
             android:layout_width="wrap_content"
+            android:visibility="invisible"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_person_add_black_24dp"
             android:text="@string/no_students_yet"
