--- a/app/src/main/res/layout-land/fragment_expovisitas.xml
+++ b/app/src/main/res/layout-land/fragment_expovisitas.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_add_black_24dp"
-            android:text="@string/no_visits_yet"
+            android:text="@string/no_visits_added_yet"
             android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
